# AI_LAB

./: .gitignore  ARCHITECTURE.md  FAILURE_FIXES.md  KNOWLEDGE_ASSISTANT.md  README.md  TRAINING.md  UPGRADE_NOTES.md  alphabet_network.json  conversation_memory.json  knowledge_library.json  novel_library.json  pyproject.toml  requirements-core.txt  requirements-optional.txt  requirements-production.txt  requirements-retrieval.txt  requirements-training.txt  requirements-web.txt  run_ai_lab.py  run_ai_lab.sh  run_assistant.sh  run_assistant_windows.bat  test_dropout.json  xor_network.json
builder/: app.py  base.py
builder/books/: __init__.py  assistant.py  backends.py  characters.py  corpus.py  document_reader.py  knowledge_assistant.py  language_models.py  memory.py  retrieval.py  summarization.py  system.py
builder/datasets/: __init__.py  alphabet_data.py
builder/experiments/: README.md  analyze_characters.py  build_semantic_index.py  build_training_corpus.py  chat_transformer.py  chat_with_knowledge.py  chat_with_novels.py  demo_novel_assistant.py  demo_text_ocr.py  export_chat_training.py  finetune_pretrained_model.py  generate_novel_text.py  ingest_knowledge.py  (+26 more)
configs/: model_large.json  model_medium.json  model_small.json  model_tiny.json  training_gpu.json  training_sft.json  training_tiny.json
samples/: sample_code.py  sample_law.txt  sample_novel.epub  sample_novel.txt  sample_paragraph.txt  sample_school.txt  sample_transcript.txt
tests/: test_advanced_books.py  test_books.py  test_framework.py  test_knowledge_assistant.py  test_trainable_llm.py
(+30 files in other folders)
