[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab"
version = "2.0.0"
description = "Trainable private transformer and document-grounded assistant"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.1",
]

[project.optional-dependencies]
web = ["Flask>=3.0"]
documents = ["pypdf>=5.0", "Pillow>=10.0", "python-docx>=1.1"]
production = ["transformers", "datasets", "peft", "accelerate", "safetensors"]
retrieval = ["sentence-transformers"]

[tool.setuptools.packages.find]
include = ["builder*"]
